--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ html {
 body {
     line-height: 1.8rem;
     font-family: 'Red Hat Display', sans-serif;
+    background: url('./images/pattern-background-desktop.svg') no-repeat top center;
+    background-size: contain;
     background-color: hsl(225, 100%, 94%);
-    
 }
 
 main {
@@ -24,23 +25,23 @@ main {
 }
 
 .card-container {
-    width: 280px;
-    min-width: 280px;
-    max-width: 640px;
+    width: 37rem;
+    min-width: 37rem;
+    max-width: 640rem;
     height: 480px;
-    border-radius: 20px;
+    border-radius: 2rem;
     background-color: #fff;
 
 }
 
 .card-container img {
     width: 100%;
-    border-radius: 20px 20px 0 0;
+    border-radius: 2rem 2rem 0 0;
 }
 
 .card-container__description {
-    margin: 20px 0;
-    padding: 0 38px;
+    margin: 2rem 0;
+    padding: 0 3.8rem;
     text-align: center;
 }
 
@@ -52,7 +53,7 @@ main {
 /*  */
 
 .card-container__description p {
-    margin: 20px 0;
+    margin: 2rem 0;
     font-size: 1.1rem;
     font-weight: 500;
     letter-spacing: 0.05rem;
@@ -62,16 +63,16 @@ main {
 .card-container__plan {
     display: flex;
     justify-content: space-evenly;
-    margin: 0 28px;
-    padding: 12px;
-    border-radius: 12px;
+    margin: 0 2.8rem;
+    padding: 1.2rem;
+    border-radius: 1.2rem;
     background-color: hsl(225, 100%, 98%);
 }
 
 .card-container__plan span {
     display: inline-block;
-    width: 36px;
-    height: 36px;
+    width: 3.6rem;
+    height: 3.6rem;
     background-image: url('./images/icon-music.svg');
     background-position: center;
     background-size: cover;
@@ -79,7 +80,7 @@ main {
 }
 
 .card-container__plan div {
-    margin: 0 20px 0 8px;
+    margin: 0 2rem 0 .8rem;
 }
 
 .card-container__plan div p:nth-child(1){
@@ -94,26 +95,49 @@ main {
 }
 
 .card-container__plan a{
-    padding: 8px;
+    font-size: 1.1rem;
+    font-weight: 900;
+    padding: .8rem;
+    color: #3829e0;
+    transition: .2s;
+}
+
+.card-container__plan a:hover{
+    color: #3829e0;
+    opacity: .65;
 }
 
 .card-container__button {
-    width: 80%;
+    width: 85%;
     height: 4.3rem;
-    margin: 24px 28px;
+    margin: 2.4rem 2.8rem;
     font-size: 1.1rem;
     font-weight: 900;
     border: none;
-    border-radius: 8px;
-    box-shadow: 0px 10px 20px hsl(225, 100%, 98%);
+    border-radius: .8rem;
+    box-shadow: 0 1rem 2rem hsl(225, 100%, 98%);
+    cursor: pointer;
+    transition: .2s ease;
     background-color: hsl(245, 75%, 52%);
-    color: #fff;
+    color: #fff;    
+}
+
+.card-container__button:hover{
+    background-color: #3829e0;
+    opacity: .65;
 }
 
 .card-container__cancel {
     text-align: center;
     font-size: 1.1rem;
     font-weight: 900;
-    color: hsl(224, 23%, 55%);
+    transition: .2s ease;
+    cursor: pointer;
+    color: hsl(223, 47%, 23%);
+    opacity: .65;
+
 }
 
+.card-container__cancel:hover {
+    opacity: 1;
+}
